--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -69,6 +69,103 @@ on property:sys.boot_completed=1
     write /dev/blkio/blkio.group_idle 2000
     write /dev/blkio/background/blkio.group_idle 0
 
+    # set thermal config
+    write /sys/class/thermal/thermal_message/sconfig 9
+
+    # swappiness & page-cluster
+    write /proc/sys/vm/page-cluster 0
+    write /proc/sys/vm/swappiness 60
+    write /proc/sys/vm/swappiness 40
+
+    # cpu schedutil
+    write /sys/devices/system/cpu/cpu_boost/input_boost_freq "0:1612800 1:1612800"
+    write /sys/devices/system/cpu/cpu_boost/input_boost_ms 200
+    write /proc/sys/kernel/sched_upmigrate "85 85"
+    write /proc/sys/kernel/sched_downmigrate "70 70"
+    write /proc/sys/kernel/sched_group_upmigrate 85
+    write /proc/sys/kernel/sched_group_downmigrate 70
+    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/hispeed_freq 1612800
+    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/hispeed_load 75
+    write /sys/devices/system/cpu/cpufreq/policy4/schedutil/hispeed_freq 2150400
+    write /sys/devices/system/cpu/cpufreq/policy4/schedutil/hispeed_load 75
+    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/hispeed_freq 2457600
+    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/hispeed_load 75
+
+on property:sys.phh.cpu.governor=*
+    write /sys/devices/system/cpu/cpufreq/policy0/scaling_governor ${sys.phh.cpu.governor}
+    write /sys/devices/system/cpu/cpufreq/policy4/scaling_governor ${sys.phh.cpu.governor}
+    write /sys/devices/system/cpu/cpufreq/policy7/scaling_governor ${sys.phh.cpu.governor}
+
+on property:sys.umg.cpu.perf=1
+    write /proc/sys/kernel/sched_upmigrate "98 98"
+    write /proc/sys/kernel/sched_downmigrate "88 88"
+    write /proc/sys/kernel/sched_group_upmigrate 98
+    write /proc/sys/kernel/sched_group_downmigrate 88
+    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/hispeed_freq 1612800
+    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/hispeed_load 98
+    write /sys/devices/system/cpu/cpufreq/policy4/schedutil/hispeed_freq 1862400
+    write /sys/devices/system/cpu/cpufreq/policy4/schedutil/hispeed_load 98
+    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/hispeed_freq 2169600
+    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/hispeed_load 98
+    write /sys/devices/system/cpu/cpu_boost/input_boost_freq "0:1075200 1:1075200"
+    write /sys/class/thermal/thermal_message/sconfig 0
+
+on property:sys.umg.cpu.perf=2
+    write /proc/sys/kernel/sched_upmigrate "95 95"
+    write /proc/sys/kernel/sched_downmigrate "85 85"
+    write /proc/sys/kernel/sched_group_upmigrate 95
+    write /proc/sys/kernel/sched_group_downmigrate 85
+    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/hispeed_freq 1612800
+    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/hispeed_load 95
+    write /sys/devices/system/cpu/cpufreq/policy4/schedutil/hispeed_freq 2150400
+    write /sys/devices/system/cpu/cpufreq/policy4/schedutil/hispeed_load 95
+    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/hispeed_freq 2457600
+    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/hispeed_load 95
+    write /sys/devices/system/cpu/cpu_boost/input_boost_freq "0:1612800 1:1612800"
+    write /sys/class/thermal/thermal_message/sconfig 0
+
+on property:sys.umg.cpu.perf=3
+    write /proc/sys/kernel/sched_upmigrate "85 85"
+    write /proc/sys/kernel/sched_downmigrate "70 70"
+    write /proc/sys/kernel/sched_group_upmigrate 85
+    write /proc/sys/kernel/sched_group_downmigrate 70
+    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/hispeed_freq 1612800
+    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/hispeed_load 75
+    write /sys/devices/system/cpu/cpufreq/policy4/schedutil/hispeed_freq 2150400
+    write /sys/devices/system/cpu/cpufreq/policy4/schedutil/hispeed_load 75
+    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/hispeed_freq 2457600
+    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/hispeed_load 75
+    write /sys/devices/system/cpu/cpu_boost/input_boost_freq "0:1612800 1:1612800"
+    write /sys/class/thermal/thermal_message/sconfig 9
+
+on property:sys.umg.cpu.perf=4
+    write /proc/sys/kernel/sched_upmigrate "80 80"
+    write /proc/sys/kernel/sched_downmigrate "65 65"
+    write /proc/sys/kernel/sched_group_upmigrate 80
+    write /proc/sys/kernel/sched_group_downmigrate 65
+    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/hispeed_freq 1804800
+    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/hispeed_load 70
+    write /sys/devices/system/cpu/cpufreq/policy4/schedutil/hispeed_freq 2150400
+    write /sys/devices/system/cpu/cpufreq/policy4/schedutil/hispeed_load 70
+    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/hispeed_freq 2457600
+    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/hispeed_load 70
+    write /sys/devices/system/cpu/cpu_boost/input_boost_freq "0:1804800 1:1804800"
+    write /sys/class/thermal/thermal_message/sconfig 9
+
+on property:sys.umg.cpu.perf=5
+    write /proc/sys/kernel/sched_upmigrate "70 70"
+    write /proc/sys/kernel/sched_downmigrate "55 55"
+    write /proc/sys/kernel/sched_group_upmigrate 70
+    write /proc/sys/kernel/sched_group_downmigrate 55
+    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/hispeed_freq 1804800
+    write /sys/devices/system/cpu/cpufreq/policy0/schedutil/hispeed_load 60
+    write /sys/devices/system/cpu/cpufreq/policy4/schedutil/hispeed_freq 2246400
+    write /sys/devices/system/cpu/cpufreq/policy4/schedutil/hispeed_load 60
+    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/hispeed_freq 2649660
+    write /sys/devices/system/cpu/cpufreq/policy7/schedutil/hispeed_load 60
+    write /sys/devices/system/cpu/cpu_boost/input_boost_freq "0:1804800 1:1804800 4:2246400"
+    write /sys/class/thermal/thermal_message/sconfig 9
+
 on property:init.svc.recovery=running
     trigger enable-low-power
 
