--- a/rootdir/etc/init.qcom.power.rc
+++ b/rootdir/etc/init.qcom.power.rc
@@ -78,7 +78,9 @@ on property:sys.boot_completed=1
 
     # cpu schedutil
     write /sys/devices/system/cpu/cpu_boost/input_boost_freq "0:1612800 1:1612800"
+    write /sys/devices/system/cpu/cpu_boost/powerkey_input_boost_freq "0:1804800 1:0 2:0 3:0 4:2419200 5:0 6:0 7:3187200"
     write /sys/devices/system/cpu/cpu_boost/input_boost_ms 200
+    write /sys/devices/system/cpu/cpu_boost/powerkey_input_boost_ms 300
     write /proc/sys/kernel/sched_upmigrate "85 85"
     write /proc/sys/kernel/sched_downmigrate "70 70"
     write /proc/sys/kernel/sched_group_upmigrate 85
